# CLAP-plugin-template-generator

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  compile_commands.json  pyproject.toml  schema.json
src/clap_plugin_generator/: cli.py  sample.yaml
src/clap_plugin_generator/clap_data/: __init__.py  clap_defs.py  clap_enums.py  clap_extensions.py
src/clap_plugin_generator/clap_schema/: __init__.py  base.py  plugin_descriptor.py
src/clap_plugin_generator/clap_schema/ext/: __init__.py  audio_ports.py  note_ports.py  params.py
src/clap_plugin_generator/templates/: macros.c.j2  plugin_main_template.c.j2
src/clap_plugin_generator/templates/clap/: Makefile.j2  README.md.j2  linux-plug.version.j2
src/clap_plugin_generator/templates/clap/src/: audio_processor.c.j2  entry.c.j2  event_processor.c.j2  params.c.j2  params.h.j2  plugin.c.j2  plugin.h.j2
src/clap_plugin_generator/templates/clap/src/ext/: audio_ports.c.j2  latency.c.j2  note_ports.c.j2  params.c.j2  state.c.j2
type_defs/: clap_defs.py  clap_enums.py  clap_extensions.py
utils/: Makefile  parse_clap_enums.c
