[project]
name = "clap-plugin-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "jinja2-strcase>=0.0.2",
    "pydantic>=2.9.2",
    "pydantic-yaml>=1.3.0",
]

[project.scripts]
cli = "clap_plugin_generator.cli:cli"
generate_schema = "clap_plugin_generator:generate_schema"
generate = "clap_plugin_generator:generate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
